fix: header bg not showing when navigating to anchors

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -10,33 +10,31 @@
   transition: color 300ms ease;
   max-width: 100vw;
 
-  &.themeIsSet {
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: var(--theme-bg);
-      opacity: 1;
-      z-index: -1;
-      transition: opacity 500ms ease-out;
-    }
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--theme-bg);
+    opacity: 1;
+    z-index: -1;
+    transition: opacity 500ms ease-out;
+  }
 
-    &:after {
-      content: '';
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      // backdrop-filter: blur(5px);
-      z-index: -1;
-      opacity: 1;
-      transition: opacity 500ms ease-out;
-    }
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // backdrop-filter: blur(5px);
+    z-index: -1;
+    opacity: 1;
+    transition: opacity 500ms ease-out;
   }
 
 
